force-app/main/default/objects/CustomerFact__c/CustomerFact__c.object-meta.xml
<CustomObject>
    <label>Customer Fact</label>
    <nameField>
        <label>Customer fact name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Facts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>