force-app/main/default/objects/CustomerFact__c/fields/ActionsMitigations__c.field-meta.xml
<CustomField>
    <fullName>ActionsMitigations__c</fullName>
    <description>Used on vulnerability and conflict of interest facts. Any actions or mitigation steps we will take to ensure we are keeping things fair for the customer</description>
    <label>Actions / mitigations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>