force-app/main/default/objects/CustomerFact__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to relevant advice</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Customer Facts</relationshipLabel>
    <relationshipName>CustomerFacts</relationshipName>
    <type>Lookup</type>
</CustomField>