force-app/main/default/objects/CustomerFact__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Estimated ago of when fact should be done</description>
    <inlineHelpText>The estimated age of the client when the fact is completed</inlineHelpText>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>