force-app/main/default/objects/CustomerFact__c/fields/ConflictManageable__c.field-meta.xml
<CustomField>
    <fullName>ConflictManageable__c</fullName>
    <description>For use on conflict of interest facts. To indicate if the conflict can be managed. If no, flag to Rene.</description>
    <label>Conflict manageable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>