force-app/main/default/objects/CustomerFact__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The estimated date this fact will be completed</description>
    <inlineHelpText>The estimated date this fact will be completed</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>