force-app/main/default/objects/CustomerFact__c/fields/DisplayOnLifeline__c.field-meta.xml
<CustomField>
    <fullName>DisplayOnLifeline__c</fullName>
    <description>Indicate to planners if facts should be displayed on the liffeline</description>
    <inlineHelpText>Please indicate if you would like this fact to appear as an event on the Lifeline</inlineHelpText>
    <label>Display on lifeline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>