force-app/main/default/objects/CustomerFact__c/fields/Fact__c.field-meta.xml
<CustomField>
    <fullName>Fact__c</fullName>
    <description>Link to fact</description>
    <label>Fact</label>
    <referenceTo>Fact__c</referenceTo>
    <relationshipLabel>Customer Facts</relationshipLabel>
    <relationshipName>Facts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>