force-app/main/default/objects/CustomerFact__c/fields/FactCategory__c.field-meta.xml
<CustomField>
    <fullName>FactCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to fact category (unused)</description>
    <label>Fact category</label>
    <referenceTo>FactCategory__c</referenceTo>
    <relationshipLabel>Customer Facts</relationshipLabel>
    <relationshipName>Facts</relationshipName>
    <type>Lookup</type>
</CustomField>