force-app/main/default/objects/CustomerFact__c/fields/FactCategoryEnum__c.field-meta.xml
<CustomField>
    <fullName>FactCategoryEnum__c</fullName>
    <description>Unique name of fact category</description>
    <formula>Fact__r.FactCategory__r.Enum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact category enum</label>
    <type>Text</type>
</CustomField>