force-app/main/default/objects/CustomerFact__c/fields/FactCategoryName__c.field-meta.xml
<CustomField>
    <fullName>FactCategoryName__c</fullName>
    <description>Used to display the fact category name using the fact relationship</description>
    <formula>Fact__r.FactCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact category name</label>
    <type>Text</type>
</CustomField>