force-app/main/default/objects/CustomerFact__c/fields/InactivatedBy__c.field-meta.xml
<CustomField>
    <fullName>InactivatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to record user who inactivated the record</description>
    <label>Inactivated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerFacts</relationshipName>
    <type>Lookup</type>
</CustomField>