force-app/main/default/objects/CustomerFact__c/fields/InactivatedDate__c.field-meta.xml
<CustomField>
    <fullName>InactivatedDate__c</fullName>
    <description>Date the fact was inactivated</description>
    <label>Inactivated date</label>
    <type>Date</type>
</CustomField>