force-app/main/default/objects/CustomerFact__c/fields/LastConfirmedBy__c.field-meta.xml
<CustomField>
    <fullName>LastConfirmedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who last confirmed the fact is still relevant</description>
    <label>Last confirmed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastConfirmedBy</relationshipName>
    <type>Lookup</type>
</CustomField>