force-app/main/default/objects/CustomerFact__c/fields/LastConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>LastConfirmedDate__c</fullName>
    <description>Date the fact was last confirmed to be relevant</description>
    <label>Last confirmed date</label>
    <type>Date</type>
</CustomField>