force-app/main/default/objects/CustomerFact__c/fields/ModelFinancialImpact__c.field-meta.xml
<CustomField>
    <fullName>ModelFinancialImpact__c</fullName>
    <description>Indicate to planners if we want to model the financial impact of this fact</description>
    <inlineHelpText>Indicate if we want to model this fact into the Client&#39;s overall wealth</inlineHelpText>
    <label>Model financial impact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>