force-app/main/default/objects/CustomerFact__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <description>OM equivalent household</description>
    <formula>IF(NOT(ISBLANK(Household__r.OctopusMoneyRecord__c)), CASESAFEID(Household__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM record</label>
    <type>Text</type>
</CustomField>