force-app/main/default/objects/CustomerFact__c/fields/OptionalNotes__c.field-meta.xml
<CustomField>
    <fullName>OptionalNotes__c</fullName>
    <description>No longer needed</description>
    <label>Optional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>