force-app/main/default/objects/CustomerFact__c/fields/ParentCustomerFact__c.field-meta.xml
<CustomField>
    <fullName>ParentCustomerFact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the parent fact from the household when customer facts are cloned to advice.</description>
    <label>Parent customer fact</label>
    <referenceTo>CustomerFact__c</referenceTo>
    <relationshipLabel>Customer Facts</relationshipLabel>
    <relationshipName>CustomerFacts</relationshipName>
    <type>Lookup</type>
</CustomField>