force-app/main/default/objects/CustomerFact__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Facts (Person)</relationshipLabel>
    <relationshipName>CustomerFactsPerson</relationshipName>
    <type>Lookup</type>
</CustomField>