force-app/main/default/objects/CustomerFact__c/fields/PostAddingInstructions__c.field-meta.xml
<CustomField>
    <fullName>PostAddingInstructions__c</fullName>
    <description>Displays a message to the user with instructions on if there are follow on actions from learning about this information</description>
    <label>Post adding instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>