force-app/main/default/objects/CustomerFact__c/fields/Transiency__c.field-meta.xml
<CustomField>
    <fullName>Transiency__c</fullName>
    <description>Indicates if this fact is permanent or subject to change and a review is needed</description>
    <formula>TEXT(Fact__r.Transient__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transiency</label>
    <type>Text</type>
</CustomField>