force-app/main/default/objects/CustomerFact__c/fields/VulnerabilityAssessment__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityAssessment__c</fullName>
    <description>Used on vulnerability facts to record if this vulnerability trigger results in the client being vulnerable.</description>
    <label>Vulnerability assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
            <value>
                <fullName>Not vulnerable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>