force-app/main/default/objects/CustomerFact__c/fields/VulnerabilityTriggerDetails__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityTriggerDetails__c</fullName>
    <description>Detail the reason the client could be vulnerable. Whether this results in vulnerability is kept in VulnerabilityAssessment__c field.</description>
    <label>Vulnerability trigger details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>