force-app/main/default/objects/CustomerFact__c/validationRules/FactOnlyPlannersAndPartnersCanEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>FactOnlyPlannersAndPartnersCanEdit</fullName>
    <active>true</active>
    <description>This is to ensure only users with the edit planner facts permission have the ability to edit planner facts.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
Fact__r.Name = &quot;Expected savings/cash&quot;
&amp;&amp;
!$Permission.FactsUpdateFinancialPlanningFacts</errorConditionFormula>
    <errorMessage>Only planners or partners can create and edit this fact</errorMessage>
</ValidationRule>