force-app/main/default/objects/CustomerFact__c/validationRules/OnlyPlannersCanEditPlannerFacts.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyPlannersCanEditPlannerFacts</fullName>
    <active>true</active>
    <description>This is to ensure only users with the edit planner facts permission have the ability to edit planner facts.</description>
    <errorConditionFormula>Fact__r.Name = &quot;Expected savings/cash&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;Planner&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;Partner&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;Head of Partners&quot;</errorConditionFormula>
    <errorMessage>Only planners or partners can create and edit this fact</errorMessage>
</ValidationRule>